[project]
name = "comfyui-42lux"
description = "Just a bunch of QOL nodes. Normalized Flux Sampling, High Res Latent Picker, Textbox with Token Counter."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/42lux/ComfyUI-42lux"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-42lux"
Icon = ""
